[gd_scene load_steps=2 format=3 uid="uid://0w2lptp2cmwk"]

[ext_resource type="Script" uid="uid://umcq5tl6onym" path="res://scripts/ui/galaxy_map.gd" id="1"]

[node name="GalaxyMap" type="Control"]
z_index = 60
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MapContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MapBorder" type="Panel" parent="MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SystemsLayer" type="Control" parent="MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -200.0
offset_right = 320.0
offset_bottom = -20.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 2

[node name="SystemNameLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "System Name"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="PopLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Population: 0/10"

[node name="TechLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Tech Level: 0/10"

[node name="MiningLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Mining: 0/10"

[node name="HSeparator2" type="HSeparator" parent="InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="FastTravelButton" type="Button" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Fast Travel"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -120.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
text = "Close [M]"

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "Galaxy Map"
horizontal_alignment = 1
